# shorty-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Amvera.yml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
shorty/: __main__.py  config.py  container.py
shorty/db/: session.py
shorty/db/migrations/: env.py
shorty/db/migrations/versions/: 0f85a59d7f8f_initial_migration.py  2025_03_09_2010-76a656ea64d9_add_user_entity.py  2025_03_13_1811-8d2e48cb6dd4_add_auth_table.py  2025_03_20_1138-317b59d4e87c_change_nullable_of_fields.py  2025_04_15_1919-8309b1fdf57a_remove_unique_on_password.py  2025_05_19_1208-9fa77b1457f6_add_url_redirect_table.py  2025_05_21_1714-498b9697ea3a_add_cascade_deletion.py
shorty/db/models/: __init__.py  auth.py  base.py  url.py  url_redirect.py  user.py
shorty/db/schemas/: auth.py  url.py  url_redirect.py  user.py
shorty/endpoints/: __init__.py  auth.py  dependencies.py  url.py  user.py
shorty/repositories/: auth.py  base.py  url.py  url_redirect.py  user.py
shorty/services/: auth.py  url.py  url_redirect.py  user.py
shorty/tests/: conftest.py
shorty/tests/unittests/: conftest.py  factories.py  test_UrlRepository.py  test_UrlService.py
shorty/utils/: enums.py  exceptions.py
