[tool.poetry]
name = "shorty"
version = "0.1.0"
description = "url shortener"
authors = ["dmitry <kalibdune@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.6"
uvicorn = "0.34.0"
pydantic-settings = "2.7.1"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
sqlalchemy = "^2.0.37"


[tool.poetry.group.dev.dependencies]
pre-commit = "4.0.1"
pytest = "8.3.4"
pytest-cov = "6.0.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
